packages/preview/sprintf/0.1.0/.nim_runtime/tests/errmsgs/t25120.nim
discard """
  errormsg: "request to generate code for .compileTime proc: riesig"
"""

proc riesig(): NimNode = discard
discard riesig()
